# paperless-cam

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
paperless_cam/: __init__.py  camera.py  config.py  paperless.py  quality.py  scanner.py  server.py
paperless_cam/static/: app.js  index.html  styles.css
tests/: test_app_cv.py  test_quality.py
