[project]
name = "paperless-cam"
version = "0.1.0"
description = "A tiny USB webcam document scanner for Paperless-ngx."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "Flask==3.0.3",
  "opencv-python-headless==4.9.0.80",
  "img2pdf==0.5.1",
  "numpy==1.26.4",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
]

[tool.pytest.ini_options]
pythonpath = ["."]
